@@ -1,3 +1,8 @@
+2009-12-12  Jonathan Yong  <jon_y@users.sourceforge.net>
+
+	* src/gendef.c: Change include path to -I/--include-def-path.
+	Add "Built on __DATE__".
+
 2009-12-13  Kai Tietz  <kai.tietz@onevision.com>
 
 	* src/gendef.c: Add option -p/-path-defs.
